--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>Quick-E-Mart</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-type' />
-    <link href="/stylesheets/960_12_col.css?1316458914" media="screen" rel="stylesheet" type="text/css" />
-    <link href="/stylesheets/default.css?1316490955" media="screen" rel="stylesheet" type="text/css" />
-    <link href="/stylesheets/style.css?1316458914" media="screen" rel="stylesheet" type="text/css" />
-		<link href="/stylesheets/breadcrumb.css" media="screen" rel="stylesheet" type="text/css" />
-    <script src="/javascripts/head.min.js?1316458914" type="text/javascript"></script>
+    <link href="stylesheets/960_12_col.css?1316458914" media="screen" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/default.css?1316490955" media="screen" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/style.css?1316458914" media="screen" rel="stylesheet" type="text/css" />
+		<link href="stylesheets/breadcrumb.css" media="screen" rel="stylesheet" type="text/css" />
+    <script src="javascripts/head.min.js?1316458914" type="text/javascript"></script>
     <meta name="csrf-param" content="authenticity_token"/>
     <meta name="csrf-token" content="u4qUG3FDIo3amt7XMdDEDGVMohfjeCeZRQ4l82/7Cz8="/>
   </head>
