--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
               Ingreso:
             </div>
             <form action='/' class='login-form' method='post'>
-              <input type='text' value='Usuario' />
-              <input type='text' value='Contraseña' />
+              <input type='text' id='username' value='Usuario' />
+              <input type='text' id='password' value='Contraseña' />
+              <input type='password' id='pass' />
             </form>
           </div>
           <div class='clear'></div>
           <div class='second_line'>
             <div class='search prefix_3 grid_5'>
               <form action='/' class='search-form' method='post'>
-                <input type='text' value='Búsqueda rápida' />
+                <input type='text' id='search-text' value='Búsqueda rápida' />
               </form>
             </div>
             <div class='localization grid_4'>
