--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns='http://www.w3.org/1999/xhtml'>
 <head>
-    <title>Quick-E-Mart</title>
+    <title>Kwik-E-Mart</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-type'/>
     <link href="stylesheets/960_12_col.css?1316458914" media="screen" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/default.css?1316490955" media="screen" rel="stylesheet" type="text/css"/>
