login logout sign up

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </h1>
 
                 <div class='topbar prefix_4 grid_5'>
-                    <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_out'><a href="/">Sign up</a><span/> | <a href="/languages">English ∆</a>
+                    <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign up</a><span/> | <a href="/languages">English ∆</a>
                 </div>
                 <div class='clear'></div>
 
