--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 </h1>
 
                 <div class='topbar prefix_4 grid_5'>
-                    <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign up</a><span/> | <a href="/languages">English ∆</a>
+                    <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign
+                    up</a><span/> | <a href="/languages">English ∆</a>
                 </div>
                 <div class='clear'></div>
 
@@ -29,24 +30,28 @@
         </div>
         <div id='guide'>
             <div class='container_12'>
-            <div id="guide-inner">
-                <div class='grid_6 alpha' id='navigation'>
+                <div id="guide-inner">
+                    <div class='grid_6 alpha' id='navigation'>
 
-                </div>
-                <div class='grid_4' id='search'>
-                    <form action="/" method="get" class="form">
-                        <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
-                    </form>
-                </div>
-                <div class='grid_2 omega' id='cart'>
-                    <img src="images/cart_icon.gif" alt="Cart"/>
-                    <div class="text">10.000,00$ | 999</div>
+                    </div>
+                    <div class='grid_4' id='search'>
+                        <form action="/" method="get" class="form">
+                            <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
+                        </form>
+                    </div>
+                    <div class='grid_2 omega' id='cart'>
+                        <div class="cart-inner">
+                            <img src="images/cart_icon.gif" alt="Cart"/>
 
+                            <div class="text">10.000,00$ | 999</div>
+
+                        </div>
+
+                    </div>
                 </div>
-            </div>
             </div>
             <div id="guide-bottom">
-              
+
             </div>
         </div>
         <div class='container_12' id='content'>
@@ -65,7 +70,7 @@
     </div>
 </div>
 <div id="pre-footer">
-  
+
 </div>
 <div id='footer'>
     <div class='container_12'>
