--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
                 </div>
                 <div class='grid_4' id='search'>
+                    <div class="loader">
+                        <img src="images/ajax-loader.gif" alt="" height="31px" width="31ox">
+                    </div>
+
                     <form action="/" method="get" class="form">
                         <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
                     </form>
