autocomplete and filters

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="stylesheets/style.css?1316458914" media="screen" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/breadcrumb.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/jquery.qtip.css" media="screen" rel="stylesheet" type="text/css"/>
+    <link href="stylesheets/custom-theme/jquery-ui-1.8.16.custom.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="javascripts/head.min.js?1316458914" type="text/javascript"></script>
 </head>
 <body>
