carrito basico, sin API #reviewthis @maximovos @ezeortiz

--- a/index.html
+++ b/index.html
@@ -36,19 +36,30 @@
                     <div class='grid_6 alpha' id='navigation'>
 
 
-                </div>
-                <div class='grid_4' id='search'>
-                    <div class="loader">
-                        <img src="images/ajax-loader.gif" alt="" height="31px" width="31ox">
                     </div>
+                    <div class='grid_4' id='search'>
+                        <div class="loader">
+                            <img src="images/ajax-loader.gif" alt="" height="31px" width="31ox">
+                        </div>
 
-                    <form action="/" method="get" class="form">
-                        <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
-                    </form>
-                </div>
-                <div class='grid_2 omega' id='cart'>
-                    <img src="images/cart_icon.gif" alt="Cart"/>
-                    <div class="text">10.000,00$ | 999</div>
+                        <form action="/" method="get" class="form">
+                            <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
+                        </form>
+                    </div>
+                    <div class='grid_2 omega' id='cart'>
+                        <img src="images/cart_icon.gif" alt="Cart" class="icon"/>
+
+                        <div class="text"><span class="cart-total">0</span>$ | <span class="cart-items-n">0</span></div>
+                        <div class="fix"></div>
+                        <div class="list">
+                            <ul>
+                                <li class="last">
+                                    <a href="#" class='cartlink'>
+                                        Ver Carrito
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
 
                     </div>
                 </div>
