carrito frontend done

--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
                         <div class="fix"></div>
                         <div class="list">
                             <ul>
-                                <li class="last">
-                                    <a href="#" class='cartlink'>
-                                        Ver Carrito
-                                    </a>
+                                <li class="last cartlink">
+                                    Check my cart
                                 </li>
                             </ul>
                         </div>
