--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id='header'>
             <div class='container_12'>
                 <h1 class='logo grid_3'>
-                    Kwik-E-Mart
+                    <a href="#">Kwik-E-Mart</a>
                 </h1>
 
                 <div class='topbar prefix_4 grid_5'>
