gmaps API #reviewthis @maximovs @ezeortiz

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link href="stylesheets/breadcrumb.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/jquery.qtip.css" media="screen" rel="stylesheet" type="text/css"/>
     <link href="stylesheets/custom-theme/jquery-ui-1.8.16.custom.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
     <script src="javascripts/head.min.js?1316458914" type="text/javascript"></script>
+
+
 </head>
 <body>
 <div id='main-container'>
