some updates #reviewthis @maximovs @ezeortiz

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
                         </form>
                     </div>
                     <div class='grid_2 omega' id='cart'>
-                        <img src="images/cart_icon.gif" alt="Cart" class="icon"/>
+                        <div class='cartcont'>
+                            <img src="images/cart_icon.gif" alt="Cart" class="icon"/>
 
                         <div class="text"><span class="cart-total">0</span>$ | <span class="cart-items-n">0</span></div>
+                        </div>
+
                         <div class="fix"></div>
                         <div class="list">
                             <ul>
