--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class='topbar prefix_3 grid_6'>
                     <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign
-                    up</a></span> | <a href="/languages">English ∆</a>
+                    up</a></span> | <span id=languages></span>
                 </div>
                 <div class='clear'></div>
 
