--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </h1>
 
                 <div class='topbar prefix_3 grid_6'>
-                    <span id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign
-                    up</a></span> | <div id='languages'>lta</div>
+                    <span lang="l_sign_in" id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign
+                    up</a></span> | <div id='languages'></div>
                 </div>
                 <div class='clear'></div>
 
