--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </h1>
 
                 <div class='topbar prefix_3 grid_6'>
-                    <span lang="l_sign_in" id='sign_in'><a href="/">Sign in</a></span> or <span id='sign_up'><a href="#users/sign_up">Sign
+                    <a href="/"><span lang="l_sign_in" id='sign_in'>Sign in</span></a> or <span id='sign_up'><a href="#users/sign_up">Sign
                     up</a></span> | <div id='languages'></div>
                 </div>
                 <div class='clear'></div>
@@ -79,7 +79,7 @@
             <div class='grid_3' id='sidebar'></div>
             <div class='grid_9' id='main-content'>
                 <noscript class='box'>
-                    <h3>Atención!</h3>
+                    <h3>Atenci&oacute;n!</h3>
 
                     <p>
                         Necesita Javascript para poder ver este sitio!
@@ -97,10 +97,10 @@
     <div class='container_12'>
         <div class='prefix_2 grid_8'>
             <h3>
-                Copyright Murcielagos - 2011
+                Copyright Murci&eacute;lagos - 2011
             </h3>
             <div class="memberlist">
-                Ortiz, Ezequiel | Pereyra, Cristian | Videla, Máximo
+                Ortiz, Ezequiel | Pereyra, Cristian | Videla, M&aacute;ximo
             </div>
         </div>
     </div>
