--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 </h1>
 
                 <div class='topbar prefix_3 grid_6'>
-                    <a href="/"><span lang="l_sign_in" id='sign_in'>Sign in</span></a> or <span id='sign_up'><a href="#users/sign_up">Sign
-                    up</a></span> | <div id='languages'></div>
+                    <a href="/"><span lang="l_sign_in" id='sign_in'>Sign in</span></a> <span id="or">or</span> <a href="#users/sign_up"><span id='sign_up'>Sign
+                    up</span></a> | <div id='languages'></div>
                 </div>
                 <div class='clear'></div>
 
@@ -46,7 +46,7 @@
                         </div>
 
                         <form action="/" method="get" class="form">
-                            <input type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
+                            <input id="quick_search"type="text" class="search soft" value="Busqueda rápida" label="Busqueda rápida"/>
                         </form>
                     </div>
                     <div class='grid_2 omega' id='cart'>
