--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         <div class="list">
                             <ul>
                                 <li class="last cartlink">
-                                    <a href="#cart">Check my cart</a>
+                                    <a href="#cart"><span id="check_my_cart">Check my cart</span></a>
                                 </li>
                                 <li class="last cartlink">
-                                    <a href="#" class="clear-cart">Clear my cart</a>
+                                    <a href="#" id="clear_my_cart" class="clear-cart">Clear my cart</a>
                                 </li>
                             </ul>
                         </div>
