--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
                 <h1 class='logo grid_3'>
                     <a href="#">Kwik-E-Mart</a>
                 </h1>
-
                 <div class='topbar prefix_3 grid_6'>
-                    <a href="/"><span lang="l_sign_in" id='sign_in'>Sign in</span></a> <span id="or">or</span> <a href="#users/sign_up"><span id='sign_up'>Sign
-                    up</span></a> | <div id='languages'></div>
+                    <div id='languages'></div>
+                    <div class="content">
+                        <a href="/"><span lang="l_sign_in" id='sign_in'>Sign in</span></a> <span id="or">or</span> <a href="#users/sign_up"><span id='sign_up'>Sign
+                        up</span></a> |
+                    </div>
+                    <div class='clear'></div>
                 </div>
                 <div class='clear'></div>
-
             </div>
         </div>
         <div id='guide'>
